[package]
name = "vke-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
url = "2.5"

[dev-dependencies]
httpmock = "0.7"
assert_cmd = "2.0"
predicates = "3.1"
